Refactor ServerBrowserScreen for better null checks